--- a/ECommerce.App/Views/Home/Authenticate.cshtml
+++ b/ECommerce.App/Views/Home/Authenticate.cshtml
@@ -1,5 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using ECommerce.App.Models
+@model AuthenticateUser
 @{
+    <div> ViewBag.User</div>
+    <div> Hi @Model. Username</div>
+    <div> @Model>Password</div>
 }
