--- a/ECommerce.App/Views/Home/SignIn.cshtml
+++ b/ECommerce.App/Views/Home/SignIn.cshtml
@@ -3,18 +3,20 @@
         <div>
             <h1 class="logo-badge text-whitesmoke"><span class="fa fa-user-circle"></span></h1>
         </div>
+        @using (@Html.BeginForm("Authenticate","Home", FormMethod.Post))
         <h3 class="text-whitesmoke">Sign In Template</h3>
         <p class="text-whitesmoke">Sign In</p>
         <div class="container-content">
+            
             <form class="margin-t">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Username" required="">
+                    <input type="email" class="form-control"  name= "Username" placeholder="name@exampl.com" required="">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="*****" required="">
+                    <input type="password" class="form-control" name= "Password" placeholder="*****" required="">
                 </div>
                 <button type="submit" class="form-button button-l margin-b">Sign In</button>
-
+                
                 <a class="text-darkyellow" href="#"><small>Forgot your password?</small></a>
                 <p class="text-whitesmoke text-center"><small>Do not have an account?</small></p>
                 <a href="@Url.Action("SignUp","Home")" class="btn btn-primary">SignUp</a>
