--- a/ECommerce.App/Views/Account/SignUp.cshtml
+++ b/ECommerce.App/Views/Account/SignUp.cshtml
@@ -3,3 +3,54 @@
 *@
 @{
 }
+@{
+    ViewData["Title"] = "Sign Up";
+}
+
+<div class="centered-form">
+    <h5>@ViewData["Title"]</h5>
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post))
+    {
+        <div class="form-group cubic-input">
+            <label for="Name">Name</label>
+            <input type="text" id="Name" name="Name" class="form-control" required maxlength="50">
+        </div>
+
+        <div class="form-group cubic-input">
+            <label for="Address">Address</label>
+            <input type="text" id="Address" name="Address" class="form-control" required maxlength="50">
+        </div>
+
+        <div class="form-group cubic-input">
+            <label for="Email">Email</label>
+            <input type="email" id="Email" name="Email" class="form-control" placeholder="name@gmail.com" required maxlength="50">
+        </div>
+
+        <div class="form-group cubic-input">
+            <label for="Password">Password</label>
+            <input type="password" id="Password" name="Password" class="form-control" required maxlength="50">
+        </div>
+
+        <div class="form-group cubic-input">
+            <label for="ContactNumber">Contact Number</label>
+            <input type="tel" id="ContactNumber" name="ContactNumber" class="form-control" pattern="[0-9]{10}" placeholder="10-digit number">
+        </div>
+
+        <div class="form-group cubic-input">
+            <label for="Age">Age</label>
+            <input type="number" id="Age" name="Age" class="form-control" min="0">
+        </div>
+
+        <div class="form-group cubic-input">
+            <label for="DOB">Date of Birth</label>
+            <input type="text" id="DOB" name="DOB" class="form-control" placeholder="YYYY-MM-DD" required pattern="\d{4}-\d{2}-\d{2}">
+        </div>
+
+        <button type="submit" class="btn btn-primary cubic-button">Sign Up</button>
+    }
+</div>
+
+<style>
+    /* CSS for cubic-shaped form elements (use the same styles as in the previous template) */
+    /* ... (the CSS you provided above) ... */
+</style>
