--- a/ECommerce.App/Views/Shared/_Layout.cshtml
+++ b/ECommerce.App/Views/Shared/_Layout.cshtml
@@ -51,6 +51,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/auth.js"></script>
+    <script src="~/js/register.js"></script>
+
     <script src="~/js/helper.js"></script>
     <script src="~/js/site.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
