--- a/ECommerce.App/Views/Account/SignUp.cshtml
+++ b/ECommerce.App/Views/Account/SignUp.cshtml
@@ -1,51 +1,58 @@
-﻿@using ECommerce.App.Models
+﻿
+<div class="card row">
 
-@model SignUpViewModel
-@{
-    <h2>Signup Form</h2>
-    <form class="row g-3">
-  <div class="col-md-4">
-    <label for="validationDefault01" class="form-label">Name</label>
-    <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
-  </div>
-
-  <div class="col-md-4">
-    <label for="validationDefaultUsername" class="form-label">Email</label>
-    <div class="input-group">
-                <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
+    <div class="card-header">
+       Register
     </div>
-  </div>
-  <div class="col-md-6">
-    <label for="validationDefault03" class="form-label">Age</label>
-    <input type="text" class="form-control" id="validationDefault03" required>
-  </div>
-  <div class="col-md-3">
-    <label for="validationDefault04" class="form-label">State</label>
-    <select class="form-select" id="validationDefault04" required>
-      <option selected disabled value="">Choose...</option>
-     
-      
+    <div class="card-body">
+        <form class="row g-3">
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">Email</label>
+                <input type="email" class="form-control" id="inputEmail4">
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Password</label>
+                <input type="password" class="form-control" id="inputPassword4">
+            </div>
+            <div class="col-12">
+                <label for="inputAddress" class="form-label">Address</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+            </div>
+            <div class="col-12">
+                <label for="inputAddress2" class="form-label">Address 2</label>
+                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+            </div>
+            <div class="col-md-6">
+                <label for="inputCity" class="form-label">City</label>
+                <input type="text" class="form-control" id="inputCity">
+            </div>
+            <div class="col-md-4">
+                <label for="inputState" class="form-label">State</label>
+                <select id="inputState" class="form-select">
+                    <option selected>Choose...</option>
+                    @foreach (var state in ViewBag.States)
+                    {
+                        <option itemid="@state.ID">@state.Name</option>
+                    }
+                </select>
+            </div>
+            <div class="col-md-2">
+                <label for="inputZip" class="form-label">Zip</label>
+                <input type="text" class="form-control" id="inputZip">
+            </div>
+            <div class="col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <label class="form-check-label" for="gridCheck">
+                        Terms and Condition
+                    </label>
+                </div>
+            </div>
+            <div class="col-12">
+                <button type="button" class="btn btn-primary" id="lnkSignUp">Sign Up</button>
+            </div>
+        </form>
+        
 
-      @foreach(var state in ViewBag.States){
-          <option>state.Name</option>
-      }
-      
-    </select>
-  </div>
-  <div class="col-md-3">
-    <label for="validationDefault05" class="form-label">Zip</label>
-    <input type="text" class="form-control" id="validationDefault05" required>
-  </div>
-  <div class="col-12">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-      <label class="form-check-label" for="invalidCheck2">
-        Agree to terms and conditions
-      </label>
     </div>
-  </div>
-  <div class="col-12">
-    <button class="btn btn-primary" type="submit">Submit form</button>
-  </div>
-</form>
-}
+</div>
