--- a/ECommerce.App/Views/Account/Unauthorized.cshtml
+++ b/ECommerce.App/Views/Account/Unauthorized.cshtml
@@ -1,6 +1,15 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-    <div>It seems you are unaithorized</div>
-}
+﻿
+  
+<div class="card text-center">
+    <div class="card-header">
+        Please sign up or try to re login again!!!
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">401</h5>
+        <p class="card-text">It seem's you are unauthorized!!!'</p>
+        <a href=@Url.Action("SignUp","Account") class="btn btn-primary">Sign Up</a>
+    </div>
+    <div class="card-footer text-body-secondary">
+       Mero Ecommerce
+    </div>
+</div>
