--- a/ECommerce.App/Views/Account/Authenticate.cshtml
+++ b/ECommerce.App/Views/Account/Authenticate.cshtml
@@ -1,12 +1,10 @@
-﻿ 
-@using ECommerce.App.Models
-@model AuthenticateUser
-
-
-
-
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
 @{
-    <div> @ViewBag.User</div>
-    <div>  Hello  @Model.UserName </div>
-    <div>   @Model.Password </div>
 }
+@model ECommerce.App.ViewsModels.AuthenticateUser
+
+<div>@ViewBag.User</div>
+<div>Hello @Model.UserName</div>
+<div>@Model.Password</div>
