--- a/ECommerce.App/Views/Account/SignIn.cshtml
+++ b/ECommerce.App/Views/Account/SignIn.cshtml
@@ -1,12 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
 }
 @{
     ViewData["Title"] = "Sign In";
@@ -21,28 +13,29 @@
 
     <!-- ... (form content) ... -->
     <h5>@ViewData["Title"]</h5>
-    @using (Html.BeginForm("Authenticate", "Account", FormMethod.Post))
-    {
+  
         <div class="form-group cubic-input">
+        <form id="signInForm" action="/Account/Authenticate" method="POST">
+            <div class="form-group cubic-input">
+                <label for="Email">Email</label>
+                <input type="email" id="Email" name="userName" class="form-control" placeholder="name@gmail.com" required />
+            </div>
+            <div class="form-group cubic-input">
+                <label for="Password">Password</label>
+                <input type="password" id="Password" name="password" class="form-control" required />
+            </div>
+            <div class="form-group">
+                <a href="/ForgotPassword" class="forgot-password-link">Forgot Password?</a>
+            </div>
+            <div class="form-group">
+                <a href="/ForgotPassword" class="forgot-password-link">Already have an account?</a>
+            </div>
+            <button type="submit" class="btn btn-primary" id="SignIn">Submit</button>
+        </form>
 
-            <label for="Email">Email</label>
-            <input type="email" id="Email" name="userName" class="form-control" placeholder="name@gmail.com" required />
-        </div>
-        <div class="form-group cubic-input">
-            <label for="Password">Password</label>
-            <input type="password" id="Password" name="password" class="form-control " required />
-        </div>
-        <div class="form-group">
-            <a href="/ForgotPassword" class="forgot-password-link">Forgot Password?</a>
-        </div>
-        <div class="form-group">
-            <a href="/ForgotPassword" class="forgot-password-link">Already have an account?</a>
-        </div>
-        <button type="submit" class="btn btn-primary cubic-button">Sign In</button>
+   
 
-    }
-
-
+        </div>
 </div>
 
 
@@ -143,4 +136,3 @@
         transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     }
 </style>
-
