--- a/ECommerce.App/Views/Account/SignUp.cshtml
+++ b/ECommerce.App/Views/Account/SignUp.cshtml
@@ -7,6 +7,14 @@
     <div class="card-body">
         <form class="row g-3">
             <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">Name</label>
+                <input type="text" class="form-control" id="inputName">
+            </div>
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">Age</label>
+                <input type="number" class="form-control" id="inputAge">
+            </div>
+            <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">Email</label>
                 <input type="email" class="form-control" id="inputEmail4">
             </div>
