--- a/ECommerce.App/Views/Account/SignUp.cshtml
+++ b/ECommerce.App/Views/Account/SignUp.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model SignUpViewModel
 <div class="card row">
 
     <div class="card-header">
@@ -36,9 +36,33 @@
             </div>
             <div class="col-md-4">
                 <label for="inputState" class="form-label">State</label>
-                <select id="inputState" class="form-select">
+               @*  <select id="inputState" class="form-select">
                     <option selected>Choose...</option>
                     @foreach (var state in ViewBag.States)
+                    {
+                        <option itemid="@state.ID">@state.Name</option>
+                    }
+                </select> *@
+                <select id="inputState" class="form-select">
+                    <option selected>Choose...</option>
+                    @foreach (var state in Model.State)
+                    {
+                        <option itemid="@state.ID">@state.Name</option>
+                    }
+                </select>
+            </div>
+            <div class="col-md-4">
+                <label for="inputDistrict" class="form-label">District</label>
+                @*  <select id="inputState" class="form-select">
+                <option selected>Choose...</option>
+                @foreach (var state in ViewBag.States)
+                {
+                <option itemid="@state.ID">@state.Name</option>
+                }
+                </select> *@
+                <select id="inputDistrict" class="form-select">
+                    <option selected>Choose...</option>
+                    @foreach (var state in Model.District)
                     {
                         <option itemid="@state.ID">@state.Name</option>
                     }
