--- a/ECommerce.App/Views/Shared/_Layout.cshtml
+++ b/ECommerce.App/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignIn">SignIn</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignUp">SigUp</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignUp">SignUp</a>
                         </li>
                     </ul>
                 </div>
@@ -51,11 +51,12 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/auth.js"></script>
-    <script src="~/js/register.js"></script>
+
 
     <script src="~/js/helper.js"></script>
+    <script src="~/js/auth.js"></script>
     <script src="~/js/site.js"></script>
+   
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
