--- a/ECommerce.App/Views/Shared/_Layout.cshtml
+++ b/ECommerce.App/Views/Shared/_Layout.cshtml
@@ -50,13 +50,14 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="~/js/helper.js" asp-append-version="true"></script>
+    <script src="~/js/auth.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
 
-    <script src="~/js/helper.js"></script>
-    <script src="~/js/auth.js"></script>
-    <script src="~/js/site.js"></script>
-   
+
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
